syntax = "proto3";

package postman.api.v1;

import "google/rpc/status.proto";

option cc_enable_arenas = true;
option csharp_namespace = "Postman.Api.V1";
option go_package = "google.golang.org/genproto/postman/api/v1/block;block";
option java_multiple_files = true;
option java_package = "com.postman.api.v1";
option objc_class_prefix = "BLOCK";
option php_namespace = "Postman\\Api\\V1";

// SendBlocksRequest holds parameters to SendBlocks
message SendBlocksRequest {
  // string field
  string id = 1;
  // object field
  string Block = 2;
}

// SendBlocksResponse holds response from SendBlocks
message SendBlocksResponse {
  // string field
  string id = 1;
  // object field
  oneof message {
    BlockResult result = 2;
    google.rpc.Status error = 3;
  }
}

// Holds Block response
message BlockResult {
  // string field
  string id = 1;
}